samples/_failures_safe/1761412247_1525d8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_09d60fd3.c: In function ‘main’:
./samples/SAFE/__tmp_09d60fd3.c:170:13: error: expected ‘)’ at end of input
  170 |     while (1
      |           ~ ^
      |             )
./samples/SAFE/__tmp_09d60fd3.c:170:5: error: expected declaration or statement at end of input
  170 |     while (1
      |     ^~~~~
